# shimtax

./: .coveragerc  .gitignore  LICENSE  README.rst  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yaml
src/shimtax/: __init__.py  _core.py  _pth.py  cli.py  errors.py  register_on_import.py
src/shimtax/_tests/: conftest.py  test_core.py
src/shimtax/_tests/encodings/: aaa_to_bbb.py  ccc_to_ddd.py  test_encodings.py
